fixing spacing disaster in projects
hopefully...

--- a/website/src/style/App.css
+++ b/website/src/style/App.css
@@ -5,7 +5,7 @@
 @import 'expEdu.css';
 @import 'skills.css';
 @import 'projects.css';
-
+@import "~react-image-gallery/styles/css/image-gallery.css";
 :root {
     --image-border-dark: rgb(0, 102, 255);
     --image-border-light: rgb(0, 70, 175);
@@ -37,6 +37,7 @@
     --font-size-h1: calc(48px + 6vw);
     --font-size-h2: calc(48px + 4vw);
     --font-size-h3: calc(24px + 1vw);
+    --gallery-button-size: calc(12px + 0.4vw);
 }
 
 
